--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "psr/log": "^1.0"
     },
     "require-dev": {
-        "kherge/box": "~2.0"
+        "kherge/box": "^2.7"
     },
     "config": {
         "platform": {
